# ip5389-powerbank-rs

./: .envrc  .gitignore  Cargo.toml  Embed.toml  TODO.md  flake.nix  memory.x
.cargo/: config.toml
emulation/: Cargo.toml  rustfmt.toml
emulation/src/: main.rs
firmware/: Cargo.toml
firmware/src/: hw.rs  main.rs  unlock_ram.rs
graphics/: Cargo.toml
graphics/src/: lib.rs
graphics/src/batteries/: batteries.rs  battery.rs  consts.rs  mod.rs
graphics/src/utils/: mod.rs
graphics/src/volttable/: consts.rs  mod.rs  row.rs  table.rs
peripherals/: Cargo.toml
peripherals/src/: bq4050.rs  lib.rs
peripherals/src/display/: batch.rs  graphics.rs  instruction.rs  mod.rs
src/: bq4050.rs  hw.rs  main.rs  unlock_ram.rs
src/peripherals/: mod.rs
