[package]
name = "powerbank"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rtt-target = "0.4.0"

cortex-m = {version = "^0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"

defmt-rtt = "0.4.0"
critical-section = "1.1.2"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"]}
mipidsi = "0.7.1"

display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
ina3221 = { git = "https://github.com/kiranshila/INA3221.git" }
byteorder = { version = "1.5.0", default-features = false }
arrform = "0.1.1"
systick-monotonic = "1.0.1"
cortex-m-rtic = "1.1.4"
dwt-systick-monotonic = "1.1.0"
format_no_std = "1.0.2"
embedded-graphics-framebuf = "0.5.0"
display-interface = "0.4.1"
embedded-layout = "0.4.1"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

# [profile.dev]
# opt-level = 1
# codegen-units = 16
# debug = true
# lto = true
[[bin]]
name = "powerbank"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "hw"
path = "src/hw.rs"
test = false
bench = false

[[bin]]
name = "unlock_ram"
path = "src/unlock_ram.rs"
test = false
bench = false

[profile.dbg]
opt-level = 1
codegen-units = 16 # better optimizations
debug = true       # symbols are nice and they don't increase the size on Flash
lto = true         # better optimizations
inherits = "dev"

[profile.dev]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
