cargo-features = ["per-package-target"]

[workspace]
members = [ "firmware",
  # "emulation",
  "graphics",
  "peripherals"
]
resolver = "2"

[profile.dev]
# opt-level = 1
codegen-units = 16
debug = true
lto = false
build-override.opt-level = 0
build-override.debug = 2

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
