cargo-features = ["per-package-target"]

[workspace]
members = [ "firmware",
  # "emulation",
  "graphics",
  "peripherals"
]
resolver = "2"

[workspace.dependencies]
defmt-rtt = "0.4.0"
rtt-target = "0.4.0"

cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1.4"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
systick-monotonic = "1.0.1"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"]}
dwt-systick-monotonic = "1.1.0"

mipidsi = "0.7.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-layout = "0.4.1"
embedded-layout-macros = "0.3.1"
embedded-graphics-framebuf = "0.5.0"

stm32f1xx-hal ={ version = "0.10.0", features = ["rt", "stm32f103", "medium"] }

ina3221 = { git = "https://github.com/kiranshila/INA3221.git" }

byteorder = { version = "1.5.0", default-features = false }
arrform = "0.1.1"
format_no_std = "1.0.2"
ryu = "1.0.16"

peripherals = { path = "peripherals" }
graphics = { path = "graphics" }


[profile.dev]
opt-level = 0
codegen-units = 16
debug = true
lto = false
# build-override.opt-level = 0
# build-override.debug = 2

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
