cargo-features = ["per-package-target"]

[package]
name = "emulation"
version = "0.1.0"
edition = "2021"
forced-target = "aarch64-apple-darwin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-simulator = "0.6.0"

embedded-graphics.workspace = true
embedded-layout.workspace = true
embedded-layout-macros.workspace = true
