cargo-features = ["per-package-target"]

[package]
name = "emulation"
version = "0.1.0"
edition = "2021"
forced-target = "aarch64-apple-darwin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-simulator = "0.6.0"

embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
embedded-layout-macros = "0.3.1"

graphics = { path = "../graphics" }

[workspace]
