cargo-features = ["per-package-target"]

[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
license = "MIT"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
defmt-rtt = "0.4.0"
rtt-target = "0.4.0"

cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1.4"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
systick-monotonic = "1.0.1"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"]}
dwt-systick-monotonic = "1.1.0"

mipidsi = "0.7.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-layout = "0.4.1"
embedded-layout-macros = "0.3.1"
embedded-graphics-framebuf = "0.5.0"

stm32f1xx-hal ={ version = "0.10.0", features = ["rt", "stm32f103", "medium"] }

ina3221 = { git = "https://github.com/kiranshila/INA3221.git" }
byteorder = { version = "1.5.0", default-features = false }
arrform = "0.1.1"
format_no_std = "1.0.2"

peripherals = { path = "../peripherals" }

[[bin]]
name = "firmware"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "hw"
path = "src/hw.rs"
test = false
bench = false

[[bin]]
name = "unlock_ram"
path = "src/unlock_ram.rs"
test = false
bench = false
