cargo-features = ["per-package-target"]

[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
license = "MIT"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
defmt-rtt.workspace = true
rtt-target.workspace = true

cortex-m.workspace = true
cortex-m-rtic.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
systick-monotonic.workspace = true
panic-rtt-target.workspace = true
dwt-systick-monotonic.workspace = true

mipidsi.workspace = true
display-interface.workspace = true
display-interface-spi.workspace = true
embedded-graphics.workspace = true
embedded-hal.workspace = true
embedded-layout.workspace = true
embedded-layout-macros.workspace = true
embedded-graphics-framebuf.workspace = true

stm32f1xx-hal.workspace = true

ina3221.workspace = true
byteorder.workspace = true
arrform.workspace = true
format_no_std.workspace = true

peripherals.workspace = true
graphics.workspace = true

[[bin]]
name = "firmware"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "hw"
path = "src/hw.rs"
test = false
bench = false

[[bin]]
name = "unlock_ram"
path = "src/unlock_ram.rs"
test = false
bench = false
