[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
embedded-layout-macros = "0.3.1"
display-interface = "0.4.1"

byteorder = { version = "1.5.0", default-features = false }
