[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics.workspace = true
embedded-layout.workspace = true
embedded-layout-macros.workspace = true
display-interface.workspace = true
ryu.workspace = true
